correct goodreads block and sidebar author info vertical alignment

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -96,7 +96,7 @@
   
   .author__content {
     display: table-cell;
-    vertical-align: top;
+    vertical-align: middle;
     text-align: center;
     padding-left: 15px;
     padding-right: 25px;
